# safety-research-system

./: .dockerignore  .env.example  .gitignore  .pylintrc  ADC_ILD_COMPREHENSIVE_REVIEW_2025.md  ADC_ILD_COMPREHENSIVE_REVIEW_2025_FINAL.md  AGENT_B_TREATMENT_RESEARCH_REPORT.md  AGENT_DEVELOPMENT.md  AGENT_MAIL_COMPLETION_SUMMARY.md  AGENT_MAIL_DESIGN_COMPLETE.md  AGENT_MAIL_IMPLEMENTATION_PLAN.md  API.md  ARCHITECTURE.md  BENCHMARK_README.md  BENCHMARK_SUMMARY.md  BIBLIOGRAPHY_COMPLETION_SUMMARY.md  BOOTSTRAPPING_PLAN.md  CODEBASE-SNAPSHOT.md  COMMUNICATION_ANALYSIS.md  COMMUNICATION_ANALYSIS_INDEX.md  COMMUNICATION_DIAGRAMS.md  COMMUNICATION_SUMMARY.txt  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  DATA-SOURCES-CATALOG.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_RUNBOOK.md  DOCUMENTATION_REPORT.md  Dockerfile  EXECUTION_SUMMARY.md  EXPANSION-PLAN.md  FAQ.md  FEATURE_EXPANSION_REPORT.md  GPUSERVER-WORKPLAN.md  IMPLEMENTATION_DECISION.md  IMPLEMENTATION_SUMMARY.md  MANUSCRIPT_EXECUTIVE_SUMMARY.md  MERGE-PLAN.md  MULTI_AGENT_MAIL_SYSTEM_ANALYSIS.md  (+50 more)
.claude/: CLAUDE.md
.github/workflows/: ci.yml  deploy.yml  security-scan.yml
agents/: __init__.py  base_auditor.py  base_worker.py  orchestrator.py
agents/auditors/: __init__.py  literature_auditor.py  mechanistic_auditor.py  risk_modeling_auditor.py  statistics_auditor.py
agents/data_sources/: README_PUBMED.md  __init__.py  clinical_trials_connector.py  pubmed_connector.py
agents/workers/: __init__.py  adc_ild_researcher.py  literature_agent.py  mechanistic_agent.py  risk_modeler.py  statistics_agent.py
alembic/: env.py
analysis/: ae_database_research.md  ct_gov_extractor.py  enhanced_faers.py  methods_section.md  publication_analysis.py  results_section.md
analysis/results/: analysis_results.json  faers_product_comparison.json  figure_1_forest_crs.txt  figure_1b_forest_crs_g3.txt  figure_2_evidence_accrual.txt  figure_3_prior_comparison.txt  figure_4_calibration.txt  statistical_summary.txt  table_1_demographics.txt  table_2_ae_rates.txt  table_3_model_comparison.txt
analytics/: __init__.py  advanced_analytics.py
api/: __init__.py  auth.py  main.py
api/routers/: audit_results.py  cases.py  health.py  tasks.py
config/: SECRETS_MANAGEMENT.md  __init__.py  base.yaml  data_sources.yaml  development.yaml  models.yaml  production.yaml  security.yaml  staging.yaml
core/: __init__.py  audit_engine.py  caching_performance.py  confidence_calibrator.py  confidence_validator.py  context_compressor.py  human_review.py  llm_integration.py  parallel_orchestrator.py  performance_profiler.py  resolution_engine.py  task_executor.py
core/agent_mail/: __init__.py  audit_trail.py  event_bus.py  mailbox.py  message_queue.py  transport.py
core/mail/: __init__.py  message.py
data/: __init__.py  cell_therapy_registry.py  edge_cases.py  sle_cart_studies.py  synthetic_cohorts.py  trial_configs.py
database/: __init__.py  base.py  models.py  repositories.py
demo/: index.html
docs/: AGENT_MAIL_README.md  SESSION-STATE.md  agent_mail_README.md  agent_mail_diagrams.md  agent_mail_executive_summary.md  agent_mail_implementation_roadmap.md  agent_mail_reference_implementation.py  agent_mail_system_design.md  battle_test_report.md  claude-integration-options.md  clinical_workflows.md  dashboard-test-report.md  data-strategy.md  deployment-roadmap.md  evaluation-framework.md  executive-summary.md  knowledge-graph-design.md  partnership-model.md  qa-report.md  regulatory-framework.md  team-of-critics-review.md
docs/pharma-sim/: regulatory-framework.md
docs/reviews/: architect_merge_review.md  biostatistician_merge_review.md  clinical_safety_merge_review.md  data_scientist_review.md  icu_nurse_review.md  iter2_accessibility_review.md  iter2_coordinator_review.md  iter2_em_physician_review.md  iter2_informaticist_review.md  iter2_regulatory_review.md  iter2_visual_qa_review.md  iter3_accessibility_validation.md  iter3_safety_officer_review.md  iter3_visual_qa_final.md  iteration1_synthesis.md  iteration2_synthesis.md  oncologist_review.md  pharmacist_review.md  pharmacovigilance_merge_review.md  ux_review.md
domains/: __init__.py  domain_config.py
evals/: __init__.py
evals/benchmarks/: __init__.py  safety_prediction.py
evals/metrics/: __init__.py  clinical_metrics.py  fairness.py
examples/: skills_composition_demo.py
gpuserver_tasks/: task1_build_knowledge_graph.py  task2_train_gnn_embeddings.py  task3_graph_explorer.py
guidelines/audit_checklists/: literature_review_checklist.md  statistics_checklist.md
infrastructure/terraform/: README.md  main.tf  variables.tf
models/: __init__.py  audit_result.py  case.py  evidence.py  task.py
monitoring/: prometheus.yml
scripts/: backup.sh  deploy.sh  init-db.sql  rollback.sh
skills/: README.md  base.py
src/: __init__.py
src/api/: __init__.py  app.py  middleware.py  narrative_engine.py  population_routes.py  schemas.py
src/data/: __init__.py  ctgov_cache.py  faers_cache.py  pharma_org.py  pharma_simulation.py
src/engine/: __init__.py  core.py
src/models/: __init__.py  bayesian_risk.py  biomarker_scores.py  ensemble_runner.py  faers_signal.py  mitigation_model.py  model_registry.py  model_validation.py  signal_triangulation.py
src/safety_index/: __init__.py  index.py
tests/: __init__.py  conftest.py  test_agent_mail_integration.py  test_agent_mail_unit.py  test_api.py  test_database.py  test_external_apis.py  test_llm_integration.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_api_endpoints.py  test_architecture_api.py  test_cdp_api.py  test_end_to_end.py  test_engine_flow.py  test_knowledge_api.py  test_narrative_api.py  test_pharma_api.py  test_population_api.py  test_prediction_pipeline.py  test_publication_api.py
tests/load/: __init__.py  test_stress.py
tests/safety/: __init__.py  test_regulatory.py
tests/stress/: test_battle.py
tests/unit/: __init__.py  test_alerts.py  test_bayesian_risk.py  test_biomarker_scores.py  test_cell_therapy_registry.py  (+19 more)
utils/: __init__.py  logging.py
(+94 files in other folders)
