[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "predictive-safety-platform"
version = "0.1.0"
description = "AI-powered adverse event prediction for cell therapy clinical trials"
readme = "docs/executive-summary.md"
license = {text = "Proprietary - AstraZeneca"}
requires-python = ">=3.11"
authors = [
    {name = "AstraZeneca Data Science & AI"},
    {name = "AstraZeneca Safety Sciences"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    # ── Core ML/AI ────────────────────────────────────────────
    "torch>=2.3.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "shap>=0.45.0",
    "lifelines>=0.29.0",              # survival analysis
    "pytorch-lightning>=2.3.0",

    # ── Data Processing ───────────────────────────────────────
    "pandas>=2.2.0",
    "polars>=1.0.0",                   # high-performance dataframes
    "pyarrow>=17.0.0",
    "numpy>=1.26.0",

    # ── AI Model Clients ──────────────────────────────────────
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-cloud-aiplatform>=1.70.0",

    # ── Clinical Data Standards ───────────────────────────────
    "fhir.resources>=7.1.0",          # FHIR R4 data models
    "hl7apy>=1.3.4",                  # HL7 v2 parsing

    # ── Genomics ──────────────────────────────────────────────
    "cyvcf2>=0.31.0",                 # VCF parsing
    "pysam>=0.22.0",                  # BAM/CRAM handling

    # ── Feature Store and ML Ops ──────────────────────────────
    "mlflow>=2.16.0",
    "great-expectations>=1.0.0",      # data validation

    # ── API and Serving ───────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",

    # ── Monitoring and Observability ──────────────────────────
    "evidently>=0.5.0",               # ML monitoring and drift detection
    "prometheus-client>=0.21.0",

    # ── Cloud and Infrastructure ──────────────────────────────
    "boto3>=1.35.0",                  # AWS SDK
    "azure-identity>=1.18.0",
    "azure-keyvault-secrets>=4.8.0",

    # ── Configuration ─────────────────────────────────────────
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "hydra-core>=1.3.2",

    # ── Utilities ─────────────────────────────────────────────
    "httpx>=0.27.0",
    "tenacity>=9.0.0",               # retry logic
    "structlog>=24.4.0",             # structured logging
    "rich>=13.8.0",                  # terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.110.0",           # property-based testing
    "ruff>=0.6.0",                   # linting and formatting
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ipython>=8.27.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

genomics = [
    "scanpy>=1.10.0",                # single-cell analysis
    "anndata>=0.10.0",
    "immunarch>=0.9.0",              # TCR/BCR repertoire
]

[project.scripts]
psp = "psp.cli:main"
psp-serve = "psp.serving.app:run"
psp-evaluate = "psp.evaluation.runner:main"
psp-monitor = "psp.monitoring.runner:main"

[project.urls]
Documentation = "https://psp-docs.astrazeneca.net"
Repository = "https://github.astrazeneca.net/ds-ai/predictive-safety-platform"
"Issue Tracker" = "https://github.astrazeneca.net/ds-ai/predictive-safety-platform/issues"

# ── Tool Configuration ────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/psp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "fhir.*",
    "hl7apy.*",
    "cyvcf2.*",
    "pysam.*",
    "shap.*",
    "evidently.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=psp",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "validation: Model validation tests (require data access)",
    "slow: Slow tests (>30 seconds)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.coverage.run]
branch = true
source = ["psp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
